<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"

    tools:context="com.mobileapplecture.ilkin.lectureapp_1.MainActivity">

    <EditText
        android:id="@+id/txt_kullaniciAdi"
        android:layout_width="237dp"
        android:layout_height="69dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#3399ff"
        android:backgroundTintMode="src_in"
        android:breakStrategy="high_quality"
        android:elevation="0dp"
        android:ems="10"
        android:hint="@string/kullanici_adi"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_sifre"
        android:layout_width="239dp"
        android:layout_height="70dp"
        android:layout_marginTop="42dp"

        android:backgroundTint="#3399ff"
        android:backgroundTintMode="src_in"
        android:breakStrategy="high_quality"
        android:cursorVisible="true"
        android:elevation="0dp"
        android:ems="10"
        android:hint="@string/sifre"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_kullaniciAdi" />

    <Button
        android:id="@+id/btn_gonder"
        android:layout_width="144dp"
        android:layout_height="54dp"
        android:layout_marginLeft="67dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="83dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/btn_gonder"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/btn_temizle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sifre" />

    <Button
        android:id="@+id/btn_temizle"
        style="@android:style/Widget.Button"
        android:layout_width="144dp"
        android:layout_height="54dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="83dp"
        android:background="@android:color/holo_blue_light"
        android:elevation="0dp"
        android:text="@string/temizle"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sifre" />

</android.support.constraint.ConstraintLayout>
