<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobileapplecture.ilkin.lectureapp_1.Ayarlar">

    <TextView
        android:id="@+id/textView"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/game_difficulty"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/highest_score"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:gravity="center_vertical"
        android:text="@string/num_friends"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="47dp"
        android:gravity="center_vertical"
        android:text="@string/num_enemies"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="51dp"
        android:gravity="center_vertical"
        android:text="@string/default_level"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/txt_enemy"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_friends" />

    <EditText
        android:id="@+id/txt_friends"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_HighestScore" />

    <Spinner
        android:id="@+id/spin_difficulty"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:entries="@array/spin_difficulty"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_HighestScore"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spin_difficulty" />

    <Button
        android:id="@+id/btn_decrease_level"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="126dp"
        android:layout_marginTop="8dp"
        android:text="-"
        app:layout_constraintBottom_toTopOf="@+id/btn_load"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_enemy"
        app:layout_constraintVertical_bias="0.483" />

    <Button
        android:id="@+id/btn_increase_level"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:layout_marginBottom="28dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="+"
        app:layout_constraintBottom_toTopOf="@+id/btn_load"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_enemy"
        app:layout_constraintVertical_bias="0.623" />

    <EditText
        android:id="@+id/txt_level"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginBottom="33dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="1"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_load"
        app:layout_constraintLeft_toRightOf="@+id/btn_decrease_level"
        app:layout_constraintRight_toLeftOf="@+id/btn_increase_level"
        app:layout_constraintTop_toBottomOf="@+id/txt_enemy"
        app:layout_constraintVertical_bias="0.671"
        app:layout_constraintHorizontal_bias="0.666" />

    <Button
        android:id="@+id/btn_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="54dp"
        android:onClick="loadDataFromPref"
        android:text="@string/btn_load_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="61dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_save_setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_load"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.868" />

</android.support.constraint.ConstraintLayout>
